--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -15,7 +15,7 @@ end
 </div>
 
 <%= 
-#image_tag '0.png'
+image_tag '0.png'
 %>
 <%=
 #button_to('Destroy', 'http://www.example.com', :confirm => 'Are you sure?', :method => "ajax_trial", :remote => true, :disable_with => 'loading...')
@@ -29,11 +29,11 @@ end
  
  #link_to "Ajaxtrial",post, { :action => 'ajax_trial' , :format => :js, :remote => "true" }, { :id => 'link_id', :'data_type' => 'script' }
 
- #,:update => { :success => "abc_sunil", :failure => "error" }
+ #,:update => { :success => "abc_", :failure => "error" }
 
 # link_to_function "Ajaxtrial",
 #   :url => { :controller => 'hangman' , :action => 'ajax_trial' },
 #   :remote => "true",
-#   :update => { :success => "abc_sunil", :failure => "error" }
+#   :update => { :success => "abc_", :failure => "error" }
 #I guess this is deprecated
 %>
