--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Hangman</h1>
-<p>Find me in app/views/hangman/index.html.erb</p>
 
 <%
 i=0  
@@ -7,33 +6,20 @@ for i in "a".."z" %>
 <%= link_to i, { :controller => 'hangman' , :action => 'process_letter' ,:id => i } ,:remote => "true"  %>
 <%
 end
-@abc="default"
+@abc=session[:user_string]
 %>
 
 <div id ="abc_abcde">
 <%= @abc %>
 </div>
 
+<br>
+<br>
+
+<div id="image">
 <%= 
+#@image='0.png'
 image_tag '0.png'
 %>
-<%=
-#button_to('Destroy', 'http://www.example.com', :confirm => 'Are you sure?', :method => "ajax_trial", :remote => true, :disable_with => 'loading...')
+</div>
 
-#button_to "Ajaxtrial", :action => "ajax_trial", :remote => true, :form => { "data-type" => "json" }
-
- #link_to "Ajaxtrial" , { :action => 'ajax_trial' , :remote => "true" }
- 
- #Working
- #link_to "Ajaxtrial" , { :controller => 'hangman' , :action => 'ajax_trial' },  :remote => "true" 
- 
- #link_to "Ajaxtrial",post, { :action => 'ajax_trial' , :format => :js, :remote => "true" }, { :id => 'link_id', :'data_type' => 'script' }
-
- #,:update => { :success => "abc_", :failure => "error" }
-
-# link_to_function "Ajaxtrial",
-#   :url => { :controller => 'hangman' , :action => 'ajax_trial' },
-#   :remote => "true",
-#   :update => { :success => "abc_", :failure => "error" }
-#I guess this is deprecated
-%>
