--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -1,25 +1,61 @@
-<h1>Hangman</h1>
+<html>
+<head>
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+ 
+    <!-- Optional: Include the jQuery library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
+    </script>
+ 
+    <!-- Optional: Incorporate the Bootstrap Javascript plugins -->
+    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
+
+</head>
+
+<body>
+<h1 align="center">Hangman</h1>
+<div class="container">
+
+<div class="row">  
+<div class="span4">  
+
+Click one letter <br><br>
+
 
 <%
 i=0  
-for i in "a".."z" %>
+for i in "a".."z" 
+%>
 <%= link_to i, { :controller => 'hangman' , :action => 'process_letter' ,:id => i } ,:remote => "true"  %>
+
 <%
 end
 @abc=session[:user_string]
 %>
 
+
+<br>
+
 <div id ="abc_abcde">
 <%= @abc %>
 </div>
 
+</div>
+
 <br>
 <br>
 
+<div class="span4">
+
 <div id="image">
 <%= 
-#@image='0.png'
 image_tag '0.png'
 %>
 </div>
 
+
+</div>
+
+</div>
+
+</body>
+</html>
