--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -20,15 +20,27 @@
 
 Click one letter <br><br>
 
+<!--row class="span8"-->
+<div class="nav-nav tabs">
+<ul class="breadcrumb">
 
 <%
 i=0  
 for i in "a".."z" 
 %>
+
+<li>
 <%= link_to i, { :controller => 'hangman' , :action => 'process_letter' ,:id => i } ,:remote => "true"  %>
+</li> 
+
+<span class="divider">   </span>
+
+<%end%>
+
+<ul>
+</div>
 
 <%
-end
 @abc=session[:user_string]
 %>
 
