start_new_game added

--- a/app/views/hangman/process_letter.js.erb
+++ b/app/views/hangman/process_letter.js.erb
@@ -1,4 +1,4 @@
-$('#abc_abcde').html('<%=@abc.html_safe %>'); // select 1st element having id = abc_abcde
+$('#abc').html('<%=@abc.html_safe %>'); // select 1st element having id = abc_abcde
 
 $guess_left = <%= session[:guesses] %>;
 
