--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -37,9 +37,8 @@ for i in "a".."z"
 
 <%end%>
 
-<ul>
+</ul>
 </div>
-
 <%
 @abc=session[:user_string]
 %>
@@ -47,7 +46,7 @@ for i in "a".."z"
 
 <br>
 
-<div id ="abc_abcde">
+<div id ="abc">
 <%= @abc %>
 </div>
 
@@ -63,9 +62,12 @@ for i in "a".."z"
 image_tag '0.png'
 %>
 </div>
-
-
 </div>
+
+<div id="startgame">
+<%= @start%>
+</div>
+
 
 </div>
 
