added link start new game

--- a/app/views/hangman/index.html.erb
+++ b/app/views/hangman/index.html.erb
@@ -40,7 +40,7 @@ for i in "a".."z"
 </ul>
 </div>
 <%
-@abc=session[:user_string]
+#@abc=session[:user_string]
 %>
 
 
@@ -64,12 +64,15 @@ image_tag '0.png'
 </div>
 </div>
 
+
+
+</div>
+<br>
 <div id="startgame">
 <%= @start%>
 </div>
 
 
-</div>
 
 </body>
 </html>
